# m8b

./: CHANGELOG.md  Cargo.toml  README.md  renovate.json
.github/workflows/: codspeed.yml  general.yml  release-please.yml  rust_security_audit.yml
benches/: my_benchmark.rs
src/: lib.rs  main.rs
