[package]
name = "m8b"
version = "0.3.3"
authors = ["Jeremiah Russell <jrussell@jerus.ie>"]
edition = "2021"
rust-version = "1.70.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "3.0.0"
rand = "0.8.5"

[dev-dependencies]
codspeed-criterion-compat = "2.6.0"
criterion = "0.5.1"

[[bench]]
name = "my_benchmark"
harness = false
