[package]
name = "m8b"
version = "0.3.4"
authors = ["Jeremiah Russell <jrussell@jerus.ie>"]
edition = "2021"
rust-version = "1.80.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "3.0.0"
rand = "0.9.2"

[dev-dependencies]
codspeed-criterion-compat = "3.0.5"
criterion = "0.7.0"

[[bench]]
name = "my_benchmark"
harness = false
